--- a/k8s/apps/jhu-devops/sonarqube/helm/values.yaml
+++ b/k8s/apps/jhu-devops/sonarqube/helm/values.yaml
@@ -445,8 +445,8 @@ postgresql:
   #   imageRegistry: ''
   #   imagePullSecrets: ''
   ## bitnami/postgres image tag
-  # image:
-  #   tag: 11.7.0-debian-10-r9
+  image:
+    tag: 16.2.0-debian-12-r14
   # existingSecret Name of existing secret to use for PostgreSQL passwords
   # The secret has to contain the keys postgresql-password which is the password for postgresqlUsername when it is
   # different of postgres, postgresql-postgres-password which will override postgresqlPassword,
