remove health probes for sonarqube

--- a/k8s/apps/jhu-devops/sonarqube/kustomization.yaml
+++ b/k8s/apps/jhu-devops/sonarqube/kustomization.yaml
@@ -4,3 +4,15 @@ commonLabels:
 
 resources:
 - generated.yaml
+
+patches:
+- target:
+    kind: StatefulSet
+    name: sonarqube-sonarqube
+  patch: |-
+    - op: replace
+      path: /spec/template/spec/containers/0/readinessProbe
+      value: {}
+    - op: replace
+      path: /spec/template/spec/containers/0/livenessProbe
+      value: {}
