attempt without setting nothing

--- a/k8s/apps/jhu-devops/sonarqube/kustomization.yaml
+++ b/k8s/apps/jhu-devops/sonarqube/kustomization.yaml
@@ -12,7 +12,7 @@ patches:
   patch: |-
     - op: replace
       path: /spec/template/spec/containers/0/readinessProbe
-      value: {}
+      value:
     - op: replace
       path: /spec/template/spec/containers/0/livenessProbe
-      value: {}
+      value:
