remove gitlab + gitlab-runner leaving PVC though

--- a/k8s/apps/jhu-devops/gitlab/kustomization.yaml
+++ b/k8s/apps/jhu-devops/gitlab/kustomization.yaml
@@ -3,7 +3,7 @@ commonLabels:
   app.zb/name: gitlab
 
 resources:
-- deploy.yaml
-- ingress.yaml
+# - deploy.yaml
+# - ingress.yaml
 - pvc.yaml
-- service.yaml
+# - service.yaml
