add tls section to argocd ingress

--- a/k8s/apps/argocd/generated.yaml
+++ b/k8s/apps/argocd/generated.yaml
@@ -22996,3 +22996,6 @@ spec:
                 name: argocd-server
                 port:
                   number: 443
+  tls:
+    - hosts:
+      - argocd.zeb17-int.duckdns.org
